@@ -1,5 +1,9 @@
-* Fixed the POD for SetParameterEOT:   
+* Fixed the POD for SetParameterEOT:
 - https://rt.cpan.org/Ticket/Display.html?id=28375
+* Added t/pod.t and t/pod-coverage.t and fixed the problems they pointed:
+- Removed some trailing pod.
+    - http://rt.cpan.org/Ticket/Display.html?id=46549
+- Documented the ->OutputConfig() method.
 
 Version 2.49:   ( Sat May  2 17:16:28 IDT 2009 )
 ------------------------------------------------
